rlctbg/raylib.py


LOC_VERTEX_POSITION = ShaderLocationIndex.VERTEX_POSITION
LOC_VERTEX_TEXCOORD01 = ShaderLocationIndex.VERTEX_TEXCOORD01
LOC_VERTEX_TEXCOORD02 = ShaderLocationIndex.VERTEX_TEXCOORD02
LOC_VERTEX_NORMAL = ShaderLocationIndex.VERTEX_NORMAL
LOC_VERTEX_TANGENT = ShaderLocationIndex.VERTEX_TANGENT
LOC_VERTEX_COLOR = ShaderLocationIndex.VERTEX_COLOR
LOC_MATRIX_MVP = ShaderLocationIndex.MATRIX_MVP
LOC_MATRIX_MODEL = ShaderLocationIndex.MATRIX_MODEL
LOC_MATRIX_VIEW = ShaderLocationIndex.MATRIX_VIEW
LOC_MATRIX_PROJECTION = ShaderLocationIndex.MATRIX_PROJECTION
LOC_VECTOR_VIEW = ShaderLocationIndex.VECTOR_VIEW
LOC_COLOR_DIFFUSE = ShaderLocationIndex.COLOR_DIFFUSE
LOC_COLOR_SPECULAR = ShaderLocationIndex.COLOR_SPECULAR
LOC_COLOR_AMBIENT = ShaderLocationIndex.COLOR_AMBIENT
LOC_MAP_ALBEDO = ShaderLocationIndex.MAP_ALBEDO
LOC_MAP_METALNESS = ShaderLocationIndex.MAP_METALNESS
LOC_MAP_NORMAL = ShaderLocationIndex.MAP_NORMAL
LOC_MAP_ROUGHNESS = ShaderLocationIndex.MAP_ROUGHNESS
LOC_MAP_OCCLUSION = ShaderLocationIndex.MAP_OCCLUSION
LOC_MAP_EMISSION = ShaderLocationIndex.MAP_EMISSION
LOC_MAP_HEIGHT = ShaderLocationIndex.MAP_HEIGHT
LOC_MAP_CUBEMAP = ShaderLocationIndex.MAP_CUBEMAP
LOC_MAP_IRRADIANCE = ShaderLocationIndex.MAP_IRRADIANCE
LOC_MAP_PREFILTER = ShaderLocationIndex.MAP_PREFILTER
LOC_MAP_BRDF = ShaderLocationIndex.MAP_BRDF

LOC_MAP_DIFFUSE = LOC_MAP_ALBEDO
LOC_MAP_SPECULAR = LOC_MAP_METALNESS


class ShaderUniformDataType(IntEnum):
    """Shader uniform data types"""
    FLOAT = 0
    VEC2 = auto()
    VEC3 = auto()
    VEC4 = auto()
    INT = auto()
    IVEC2 = auto()
    IVEC3 = auto()
    IVEC4 = auto()
    SAMPLER2D = auto()


UNIFORM_FLOAT = ShaderUniformDataType.FLOAT
UNIFORM_VEC2 = ShaderUniformDataType.VEC2
UNIFORM_VEC3 = ShaderUniformDataType.VEC3
UNIFORM_VEC4 = ShaderUniformDataType.VEC4
UNIFORM_INT = ShaderUniformDataType.INT
UNIFORM_IVEC2 = ShaderUniformDataType.IVEC2
UNIFORM_IVEC3 = ShaderUniformDataType.IVEC3
UNIFORM_IVEC4 = ShaderUniformDataType.IVEC4
UNIFORM_SAMPLER2D = ShaderUniformDataType.SAMPLER2D


class MaterialMapType(IntEnum):
    """Material map type"""
    ALBEDO = 0
    METALNESS = 1
    NORMAL = 2
    ROUGHNESS = 3
    OCCLUSION = auto()
    EMISSION = auto()
    HEIGHT = auto()
    CUBEMAP = auto()
    IRRADIANCE = auto()
    PREFILTER = auto()
    BRDF = auto()


MAP_ALBEDO = MaterialMapType.ALBEDO
MAP_METALNESS = MaterialMapType.METALNESS
MAP_NORMAL = MaterialMapType.NORMAL
MAP_ROUGHNESS = MaterialMapType.ROUGHNESS
MAP_OCCLUSION = MaterialMapType.OCCLUSION
MAP_EMISSION = MaterialMapType.EMISSION
MAP_HEIGHT = MaterialMapType.HEIGHT
MAP_CUBEMAP = MaterialMapType.CUBEMAP
MAP_IRRADIANCE = MaterialMapType.IRRADIANCE
MAP_PREFILTER = MaterialMapType.PREFILTER
MAP_BRDF = MaterialMapType.BRDF

MAP_DIFFUSE = MAP_ALBEDO
MAP_SPECULAR = MAP_METALNESS


class PixelFormat(IntEnum):
    """NOTE: Support depends on OpenGL version and platform"""
    GRAYSCALE = 1
    GRAY_ALPHA = auto()
    R5G6B5 = auto()
    R8G8B8 = auto()
    R5G5B5A1 = auto()
    R4G4B4A4 = auto()
    R8G8B8A8 = auto()
    R32 = auto()
    R32G32B32 = auto()
    R32G32B32A32 = auto()
    DXT1_RGB = auto()
    DXT1_RGBA = auto()
    DXT3_RGBA = auto()
    DXT5_RGBA = auto()
    ETC1_RGB = auto()
    ETC2_RGB = auto()
    ETC2_EAC_RGBA = auto()
    PVRT_RGB = auto()
    PVRT_RGBA = auto()
    ASTC_4x4_RGBA = auto()
    ASTC_8x8_RGBA = auto()


UNCOMPRESSED_GRAYSCALE = PixelFormat.GRAYSCALE
UNCOMPRESSED_GRAY_ALPHA = PixelFormat.GRAY_ALPHA
UNCOMPRESSED_R5G6B5 = PixelFormat.R5G6B5
UNCOMPRESSED_R8G8B8 = PixelFormat.R8G8B8
UNCOMPRESSED_R5G5B5A1 = PixelFormat.R5G5B5A1
UNCOMPRESSED_R4G4B4A4 = PixelFormat.R4G4B4A4
UNCOMPRESSED_R8G8B8A8 = PixelFormat.R8G8B8A8
UNCOMPRESSED_R32 = PixelFormat.R32
UNCOMPRESSED_R32G32B32 = PixelFormat.R32G32B32
UNCOMPRESSED_R32G32B32A32 = PixelFormat.R32G32B32A32
UNCOMPRESSED_DXT1_RGB = PixelFormat.DXT1_RGB
UNCOMPRESSED_DXT1_RGBA = PixelFormat.DXT1_RGBA
UNCOMPRESSED_DXT3_RGBA = PixelFormat.DXT3_RGBA
UNCOMPRESSED_DXT5_RGBA = PixelFormat.DXT5_RGBA
UNCOMPRESSED_ETC1_RGB = PixelFormat.ETC1_RGB
UNCOMPRESSED_ETC2_RGB = PixelFormat.ETC2_RGB
UNCOMPRESSED_ETC2_EAC_RGBA = PixelFormat.ETC2_EAC_RGBA
UNCOMPRESSED_PVRT_RGB = PixelFormat.PVRT_RGB
UNCOMPRESSED_PVRT_RGBA = PixelFormat.PVRT_RGBA
UNCOMPRESSED_ASTC_4x4_RGBA = PixelFormat.ASTC_4x4_RGBA
UNCOMPRESSED_ASTC_8x8_RGBA = PixelFormat.ASTC_8x8_RGBA


class TextureFilterMode(IntEnum):
    """NOTE 2: Filter is accordingly set for minification and magnification"""
    POINT = 0
    BILINEAR = auto()
    TRILINEAR = auto()
    ANISOTROPIC_4X = auto()
    ANISOTROPIC_8X = auto()
    ANISOTROPIC_16X = auto()


FILTER_POINT = TextureFilterMode.POINT
FILTER_BILINEAR = TextureFilterMode.BILINEAR
FILTER_TRILINEAR = TextureFilterMode.TRILINEAR
FILTER_ANISOTROPIC_4X = TextureFilterMode.ANISOTROPIC_4X
FILTER_ANISOTROPIC_8X = TextureFilterMode.ANISOTROPIC_8X
FILTER_ANISOTROPIC_16X = TextureFilterMode.ANISOTROPIC_16X


class CubemapLayoutType(IntEnum):
    """Cubemap layout type"""
    AUTO_DETECT = 0
    LINE_VERTICAL = auto()
    LINE_HORIZONTAL = auto()
    CROSS_THREE_BY_FOUR = auto()
    CROSS_FOUR_BY_THREE = auto()
    PANORAMA = auto()


CUBEMAP_AUTO_DETECT = CubemapLayoutType.AUTO_DETECT
CUBEMAP_LINE_VERTICAL = CubemapLayoutType.LINE_VERTICAL
CUBEMAP_LINE_HORIZONTAL = CubemapLayoutType.LINE_HORIZONTAL
CUBEMAP_CROSS_THREE_BY_FOUR = CubemapLayoutType.CROSS_THREE_BY_FOUR
CUBEMAP_CROSS_FOUR_BY_THREE = CubemapLayoutType.CROSS_FOUR_BY_THREE
CUBEMAP_PANORAMA = CubemapLayoutType.PANORAMA


class TextureWrapMode(IntEnum):
    """Texture parameters: wrap mode"""
    REPEAT = 0
    CLAMP = auto()
    MIRROR_REPEAT = auto()
    MIRROR_CLAMP = auto()


WRAP_REPEAT = TextureWrapMode.REPEAT
WRAP_CLAMP = TextureWrapMode.CLAMP
WRAP_MIRROR_REPEAT = TextureWrapMode.MIRROR_REPEAT
WRAP_MIRROR_CLAMP = TextureWrapMode.MIRROR_CLAMP


class FontType(IntEnum):
    """Font type, defines generation method"""
    DEFAULT = 0
    BITMAP = auto()
    SDF = auto()


FONT_DEFAULT = FontType.DEFAULT
FONT_BITMAP = FontType.BITMAP
FONT_SDF = FontType.SDF


class BlendMode(IntEnum):
    """Color blending modes (pre-defined)"""
    ALPHA = 0
    ADDITIVE = auto()
    MULTIPLIED = auto()


BLEND_ALPHA = BlendMode.ALPHA
BLEND_ADDITIVE = BlendMode.ADDITIVE
BLEND_MULTIPLIED = BlendMode.MULTIPLIED


class GestureType(IntEnum):
    """NOTE: It could be used as flags to enable only some gestures"""
    NONE = 0
    TAP = 1
    DOUBLETAP = 2
    HOLD = 4
    DRAG = 8
    SWIPE_RIGHT = 16
    SWIPE_LEFT = 32
    SWIPE_UP = 64
    SWIPE_DOWN = 128
    PINCH_IN = 256
    PINCH_OUT = 512


GESTURE_NONE = GestureType.NONE
GESTURE_TAP = GestureType.TAP
GESTURE_DOUBLETAP = GestureType.DOUBLETAP
GESTURE_HOLD = GestureType.HOLD
GESTURE_DRAG = GestureType.DRAG
GESTURE_SWIPE_RIGHT = GestureType.SWIPE_RIGHT
GESTURE_SWIPE_LEFT = GestureType.SWIPE_LEFT
GESTURE_SWIPE_UP = GestureType.SWIPE_UP
GESTURE_SWIPE_DOWN = GestureType.SWIPE_DOWN
GESTURE_PINCH_IN = GestureType.PINCH_IN
GESTURE_PINCH_OUT = GestureType.PINCH_OUT


class CameraMode(IntEnum):
    """Camera system modes"""
    CUSTOM = 0
    FREE = auto()
    ORBITAL = auto()
    FIRST_PERSON = auto()
    THIRD_PERSON = auto()


CAMERA_CUSTOM = CameraMode.CUSTOM
CAMERA_FREE = CameraMode.FREE
CAMERA_ORBITAL = CameraMode.ORBITAL
CAMERA_FIRST_PERSON = CameraMode.FIRST_PERSON
CAMERA_THIRD_PERSON = CameraMode.THIRD_PERSON


class CameraType(IntEnum):
    """Camera projection modes"""
    PERSPECTIVE = 0
    ORTHOGRAPHIC = auto()


CAMERA_PERSPECTIVE = CameraType.PERSPECTIVE
CAMERA_ORTHOGRAPHIC = CameraType.ORTHOGRAPHIC


class NPatchType(IntEnum):
    """Type of n-patch"""
    N9PATCH = 0
    N3PATCH_VERTICAL = auto()
    N3PATCH_HORIZONTAL = auto()


NPT_9PATCH = NPatchType.N9PATCH
NPT_3PATCH_VERTICAL = NPatchType.N3PATCH_VERTICAL
NPT_3PATCH_HORIZONTAL = NPatchType.N3PATCH_HORIZONTAL


TraceLogCallback = CFUNCTYPE(c_int, c_char_p, c_void_p)

LIGHTGRAY = Color(200, 200, 200, 255)    # Light Gray
GRAY = Color(130, 130, 130, 255)    # Gray
DARKGRAY = Color(80, 80, 80, 255)       # Dark Gray
YELLOW = Color(253, 249, 0, 255)      # Yellow
GOLD = Color(255, 203, 0, 255)      # Gold
ORANGE = Color(255, 161, 0, 255)      # Orange
PINK = Color(255, 109, 194, 255)    # Pink
RED = Color(230, 41, 55, 255)      # Red
MAROON = Color(190, 33, 55, 255)      # Maroon
GREEN = Color(0, 228, 48, 255)       # Green
LIME = Color(0, 158, 47, 255)       # Lime
DARKGREEN = Color(0, 117, 44, 255)       # Dark Green
SKYBLUE = Color(102, 191, 255, 255)    # Sky Blue
BLUE = Color(0, 121, 241, 255)      # Blue
DARKBLUE = Color(0, 82, 172, 255)       # Dark Blue
PURPLE = Color(200, 122, 255, 255)    # Purple
VIOLET = Color(135, 60, 190, 255)     # Violet
DARKPURPLE = Color(112, 31, 126, 255)     # Dark Purple
BEIGE = Color(211, 176, 131, 255)    # Beige
BROWN = Color(127, 106, 79, 255)     # Brown
DARKBROWN = Color(76, 63, 47, 255)       # Dark Brown
WHITE = Color(255, 255, 255, 255)    # White
BLACK = Color(0, 0, 0, 255)          # Black
BLANK = Color(0, 0, 0, 0)            # Blank (Transparent)
MAGENTA = Color(255, 0, 255, 255)      # Magenta
RAYWHITE = Color(245, 245, 245, 255)    # My own White (raylib logo)

_rl.InitWindow.argtypes = [c_int, c_int, c_char_p]
_rl.InitWindow.restype = None
def init_window(width: int, height: int, title: bytes) -> None:
    _rl.InitWindow(width, height, title)


_rl.WindowShouldClose.argtypes = []
_rl.WindowShouldClose.restype = c_bool
def window_should_close() -> bool:
    return _rl.WindowShouldClose()


_rl.CloseWindow.argtypes = []
_rl.CloseWindow.restype = None
def close_window() -> None:
    _rl.CloseWindow()


_rl.IsWindowReady.argtypes = []
_rl.IsWindowReady.restype = c_bool
def is_window_ready() -> bool:
    return _rl.IsWindowReady()


_rl.IsWindowMinimized.argtypes = []
_rl.IsWindowMinimized.restype = c_bool
def is_window_minimized() -> bool:
    return _rl.IsWindowMinimized()


_rl.IsWindowResized.argtypes = []
_rl.IsWindowResized.restype = c_bool
def is_window_resized() -> bool:
    return _rl.IsWindowResized()


_rl.IsWindowHidden.argtypes = []
_rl.IsWindowHidden.restype = c_bool
def is_window_hidden() -> bool:
    return _rl.IsWindowHidden()


_rl.ToggleFullscreen.argtypes = []
_rl.ToggleFullscreen.restype = None
def toggle_fullscreen() -> None:
    _rl.ToggleFullscreen()


_rl.UnhideWindow.argtypes = []
_rl.UnhideWindow.restype = None
def unhide_window() -> None:
    _rl.UnhideWindow()


_rl.HideWindow.argtypes = []
_rl.HideWindow.restype = None
def hide_window() -> None:
    _rl.HideWindow()


_rl.SetWindowIcon.argtypes = [Image]
_rl.SetWindowIcon.restype = None
def set_window_icon(image: Image) -> None:
    _rl.SetWindowIcon(image)


_rl.SetWindowTitle.argtypes = [c_char_p]
_rl.SetWindowTitle.restype = None
def set_window_title(title: bytes) -> None:
    _rl.SetWindowTitle(title)


_rl.SetWindowPosition.argtypes = [c_int, c_int]
_rl.SetWindowPosition.restype = None
def set_window_position(x: int, y: int) -> None:
    _rl.SetWindowPosition(x, y)


_rl.SetWindowMonitor.argtypes = [c_int]
_rl.SetWindowMonitor.restype = None
def set_window_monitor(monitor: int) -> None:
    _rl.SetWindowMonitor(monitor)


_rl.SetWindowMinSize.argtypes = [c_int, c_int]
_rl.SetWindowMinSize.restype = None
def set_window_min_size(width: int, height: int) -> None:
    _rl.SetWindowMinSize(width, height)


_rl.SetWindowSize.argtypes = [c_int, c_int]
_rl.SetWindowSize.restype = None
def set_window_size(width: int, height: int) -> None:
    _rl.SetWindowSize(width, height)


_rl.GetWindowHandle.argtypes = []
_rl.GetWindowHandle.restype = c_void_p
def get_window_handle() -> int:
    return _rl.GetWindowHandle()


_rl.GetScreenWidth.argtypes = []
_rl.GetScreenWidth.restype = c_int
def get_screen_width() -> int:
    return _rl.GetScreenWidth()


_rl.GetScreenHeight.argtypes = []
_rl.GetScreenHeight.restype = c_int
def get_screen_height() -> int:
    return _rl.GetScreenHeight()

